@@ -1,3 +1,7 @@
+2006-08-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* configure.ac, Makefile.am, +datrie.pc.in: Added pkgconfig file.
+
 2006-08-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* datrie/sb-trie.{h,c} (sb_trie_state_is_terminal),
